[metadata]
name = atrunner
version = attr: atrunner.__version__
url = https://github.com/penpenpng/atrunner
# download_url
# project_urls
author = penpenpng
author_email = poman1638m@gmail.com
# maintainer
# maintainer_email
# classifiers
license = MIT
license_file = LICENSE
description = Run sample cases of an atcoder problem.
long_description = file: README.md
long_description_content_type = text/markdown
# keywords
# platforms
# provides
# requires
# obsoletes

[options]
zip_safe = false
setup_requires =
  setuptools >= 38.3.0
install_requires =
  requests
  beautifulsoup4
# extra_require
python_requires =
  >= 3.7
entry_points = file: entry_points.cfg
# use_2to3
# use_2to3_fixers
# use_2to3_exclude_fixers
# convert_2to3_doctests
# scripts
# eager_resources
# dependency_links
# test_require
include_package_data = true
packages = find:
package_dir =
  = src
# package_data
# exclude_package_data
# namespace_packages
# py_modules
# data_files

[options.packages.find]
where = src
